--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Albertbz",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^6.1.0",
     "discord.js": "^14.22.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
