--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "csv-parse": "^6.1.0",
     "discord.js": "^14.22.1",
+    "google-auth-library": "^10.3.0",
+    "google-spreadsheet": "^5.0.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
