--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A bot to keep track of all storyteller spreadsheets for the CoT Discord Server",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "deploy-commands": "node deploy-commands.js",
+    "db:init": "node dbInit.js",
+    "db:init:force": "node dbInit.js --force",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Albertbz",
