--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "password",
     "database": "database",
     "host": "localhost",
-    "dialect": "sqlite"
+    "dialect": "sqlite",
+    "storage": "./database.sqlite"
   },
   "test": {
     "username": "user",
