--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^14.24.2",
     "google-auth-library": "^10.3.0",
     "google-spreadsheet": "^5.0.2",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
